# cobblemon-wiki-generator

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  pokemon.rs  pokemon_routes.rs
templates/: base.html  index.html  pokemon.html
